# sage

./: .gitignore  README.md  main.py  pyproject.toml
sage/: agent.py  context.py  discovery.py  main.py  permissions.py  providers.py  selector.py  sysinfo.py  ui.py
sage/tools/: __init__.py  base.py  files.py  search.py  shell.py  web.py
tests/: test_discovery.py
