[project]
name = "sage"
version = "0.1.0"
description = "A local AI coding agent for the terminal"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.49.0",
    "rich>=13.9.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "openai>=2.33.0",
    "psutil>=5.9.0",
]

[project.scripts]
sage = "sage.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
